--- a/Mission_3/beranda.html
+++ b/Mission_3/beranda.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <head>
-    
+    <title>videobelajar</title>
+    <link rel="stylesheet" href="style.css">
 <body>
-    <a href="index.html"><button>kembali</button></a>
+    <div class="header">
+        <img src="Logo.png" alt="videobelajar">
+    </div>
+    <div>
+        <img src="" alt="">
+    </div>
 </body>
