--- a/Mission_3/register.html
+++ b/Mission_3/register.html
@@ -8,33 +8,35 @@
     <div class="header">
     <img src="Logo.png" alt="videobelajar">
 </div>
-    <div class="wrapper">
+    <div class="wrapper">    
+    <div class="desc">
+        <div class="masukAkun">Pendaftaran Akun</div>
+        <div class="yuk">Yuk, daftarkan akunmu sekarang juga!</div>
+    </div>
     <form action="">
-    <div class="div">pendaftaran akun.</div>
-    <div class="div">Yuk, daftarkan akunmu sekarang juga!</div>
-    <div>Nama Lengkap</div>
-    <input type="text">
-    <div>E-Mail</div>
-    <input type="text">
-    <div>No.Hp</div>
-    <select name="" id="">
-    <option value="">+62</option>
-    <option value="">+63</option>
-    <input type="number">
-    </select>
-    <div>Kata Sandi</div>
-    <input type="text">
-    <div>Konfirmasi Kata Sandi</div>
-    <input type="text">
-    <br>
-    <a href="">Lupa Password?</a>
-    <br>
-    <a href="beranda.html"><button type="button">Daftar</button></a>
-    <br>
-    <a href="index.html"><button type="button">Masuk</button></a>
-    <div></div>
-    <button>Daftar dengan Google</button>
-</form>
+        <label for="" >Nama Lengkap*</label>
+        <input type="text" class="passMargin">
+        <label for="" >E-Mail*</label>
+        <input type="text" class="passMargin">
+        <label for="" >No.Hp*</label>
+        <select name="" id="" class="passMargin">
+        <option value="">+62</option>
+        <option value="">+63</option>
+        </select>
+        <input type="number" class="hp">
+        <label for="">Kata Sandi*</label>
+        <input type="password" class="passMargin">
+        <label for="">Konfirmasi Kata Sandi*</label>
+        <input type="password" class="passMargin">
+        <br>
+        <a href="#" class="lupa"><div>Lupa Password?</div></a>
+        <br>
+        <a href="beranda.html"><button class="btnMasuk" type="button">Daftar</button></a>
+        <br>
+        <a href="index.html"><button class="btnDaftar" type="button">Masuk</button></a>
+        <div class="atau">atau</div>
+        <button class="btnGoogle"><img src="logo_google-icon.png">Daftar dengan Google</button>
+    </form>
 </div>
 
 </body>
